--- a/StockManager/Views/PrinterChalans/Create.cshtml
+++ b/StockManager/Views/PrinterChalans/Create.cshtml
@@ -15,7 +15,7 @@
             <div class="row">
                 <div id="div1" class="col-md-6 col-xs-12">
                     <div class="form-group">
-                        @Html.Label("Vendor", "VendorId", htmlAttributes: new { @class = "control-label col-md-3" })
+                        @Html.Label("Vendor", "Vendor", htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-7">
                             @Html.DropDownList("VendorId", null, htmlAttributes: new { @class = "form-control col-md-7", @id = "Vendor" })
                             @Html.ValidationMessageFor(model => model.VendorId, "", new { @class = "text-danger" })
